centjes-gen/test_resources/register/valid/quarterly-subscription-monthly-average.config
register:
  filter: expenses:electricity
  block: monthly
