centjes-gen/test_resources/register/error/block-amount-too-big.config
register:
  filter: expenses
  block: monthly
